openmediavault/homecloud-arm64/etc/homecloud/iptables.rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Mon Apr 21 11:19:40 2025
*filter
:INPUT ACCEPT [367:29647]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8866:7142925]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp -m udp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p udp -m udp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8097 -j ACCEPT
-A INPUT -p udp -m udp --dport 8097 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22302 -j ACCEPT
-A INPUT -s 0.0.0.0/32 -p udp -m udp --dport 22302 -j ACCEPT
-A INPUT -s 100.0.0.0/8 -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -s 100.0.0.0/8 -p udp -m udp --dport 8000 -j ACCEPT
-A INPUT -p udp -m udp --dport 41641 -j ACCEPT
-A INPUT -p udp -m udp --dport 3478 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 445 -j ACCEPT
-A INPUT -p udp -m udp --dport 137 -j ACCEPT
-A INPUT -p udp -m udp --dport 138 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 139 -j ACCEPT
-A INPUT -p udp -m udp --dport 5353 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -d 0.0.0.0/32 -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p udp -m udp --dport 5000 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A INPUT -i tailscale0 -j ACCEPT
-A INPUT -p tcp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o br-aeffba36d3c6 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-aeffba36d3c6 -j DOCKER
-A FORWARD -i br-aeffba36d3c6 ! -o br-aeffba36d3c6 -j ACCEPT
-A FORWARD -i br-aeffba36d3c6 -o br-aeffba36d3c6 -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-eb9ed50d065e -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-eb9ed50d065e -j DOCKER
-A FORWARD -i br-eb9ed50d065e ! -o br-eb9ed50d065e -j ACCEPT
-A FORWARD -i br-eb9ed50d065e -o br-eb9ed50d065e -j ACCEPT
-A FORWARD -o br-9048e5804adf -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-9048e5804adf -j DOCKER
-A FORWARD -i br-9048e5804adf ! -o br-9048e5804adf -j ACCEPT
-A FORWARD -i br-9048e5804adf -o br-9048e5804adf -j ACCEPT
-A FORWARD -o br-653f8d9c9a60 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-653f8d9c9a60 -j DOCKER
-A FORWARD -i br-653f8d9c9a60 ! -o br-653f8d9c9a60 -j ACCEPT
-A FORWARD -i br-653f8d9c9a60 -o br-653f8d9c9a60 -j ACCEPT
-A FORWARD -o br-13d8c416478b -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-13d8c416478b -j DOCKER
-A FORWARD -i br-13d8c416478b ! -o br-13d8c416478b -j ACCEPT
-A FORWARD -i br-13d8c416478b -o br-13d8c416478b -j ACCEPT
-A FORWARD -o br-0f565fc28e09 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-0f565fc28e09 -j DOCKER
-A FORWARD -i br-0f565fc28e09 ! -o br-0f565fc28e09 -j ACCEPT
-A FORWARD -i br-0f565fc28e09 -o br-0f565fc28e09 -j ACCEPT
-A FORWARD -o br-fc3beef5afd5 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-fc3beef5afd5 -j DOCKER
-A FORWARD -i br-fc3beef5afd5 ! -o br-fc3beef5afd5 -j ACCEPT
-A FORWARD -i br-fc3beef5afd5 -o br-fc3beef5afd5 -j ACCEPT
-A FORWARD -o br-68905ab9bfbe -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-68905ab9bfbe -j DOCKER
-A FORWARD -i br-68905ab9bfbe ! -o br-68905ab9bfbe -j ACCEPT
-A FORWARD -i br-68905ab9bfbe -o br-68905ab9bfbe -j ACCEPT
-A FORWARD -o br-ae38ff210a82 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-ae38ff210a82 -j DOCKER
-A FORWARD -i br-ae38ff210a82 ! -o br-ae38ff210a82 -j ACCEPT
-A FORWARD -i br-ae38ff210a82 -o br-ae38ff210a82 -j ACCEPT
-A FORWARD -o br-5a4ae99fa727 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-5a4ae99fa727 -j DOCKER
-A FORWARD -i br-5a4ae99fa727 ! -o br-5a4ae99fa727 -j ACCEPT
-A FORWARD -i br-5a4ae99fa727 -o br-5a4ae99fa727 -j ACCEPT
-A FORWARD -o br-2f970c564c32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-2f970c564c32 -j DOCKER
-A FORWARD -i br-2f970c564c32 ! -o br-2f970c564c32 -j ACCEPT
-A FORWARD -i br-2f970c564c32 -o br-2f970c564c32 -j ACCEPT
-A FORWARD -o br-131418b05d0c -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-131418b05d0c -j DOCKER
-A FORWARD -i br-131418b05d0c ! -o br-131418b05d0c -j ACCEPT
-A FORWARD -i br-131418b05d0c -o br-131418b05d0c -j ACCEPT
-A FORWARD -o br-efdfc61de891 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-efdfc61de891 -j DOCKER
-A FORWARD -i br-efdfc61de891 ! -o br-efdfc61de891 -j ACCEPT
-A FORWARD -i br-efdfc61de891 -o br-efdfc61de891 -j ACCEPT
-A FORWARD -o br-ec04658047a5 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-ec04658047a5 -j DOCKER
-A FORWARD -i br-ec04658047a5 ! -o br-ec04658047a5 -j ACCEPT
-A FORWARD -i br-ec04658047a5 -o br-ec04658047a5 -j ACCEPT
-A FORWARD -o br-de9dc8b393da -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-de9dc8b393da -j DOCKER
-A FORWARD -i br-de9dc8b393da ! -o br-de9dc8b393da -j ACCEPT
-A FORWARD -i br-de9dc8b393da -o br-de9dc8b393da -j ACCEPT
-A FORWARD -o br-ad85042f2493 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-ad85042f2493 -j DOCKER
-A FORWARD -i br-ad85042f2493 ! -o br-ad85042f2493 -j ACCEPT
-A FORWARD -i br-ad85042f2493 -o br-ad85042f2493 -j ACCEPT
-A FORWARD -o br-83d47e059932 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-83d47e059932 -j DOCKER
-A FORWARD -i br-83d47e059932 ! -o br-83d47e059932 -j ACCEPT
-A FORWARD -i br-83d47e059932 -o br-83d47e059932 -j ACCEPT
-A FORWARD -o br-7752a96d6505 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-7752a96d6505 -j DOCKER
-A FORWARD -i br-7752a96d6505 ! -o br-7752a96d6505 -j ACCEPT
-A FORWARD -i br-7752a96d6505 -o br-7752a96d6505 -j ACCEPT
-A FORWARD -o br-71acd99896f9 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-71acd99896f9 -j DOCKER
-A FORWARD -i br-71acd99896f9 ! -o br-71acd99896f9 -j ACCEPT
-A FORWARD -i br-71acd99896f9 -o br-71acd99896f9 -j ACCEPT
-A FORWARD -o br-5b4f89e637f2 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-5b4f89e637f2 -j DOCKER
-A FORWARD -i br-5b4f89e637f2 ! -o br-5b4f89e637f2 -j ACCEPT
-A FORWARD -i br-5b4f89e637f2 -o br-5b4f89e637f2 -j ACCEPT
-A FORWARD -o br-e00b48123951 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-e00b48123951 -j DOCKER
-A FORWARD -i br-e00b48123951 ! -o br-e00b48123951 -j ACCEPT
-A FORWARD -i br-e00b48123951 -o br-e00b48123951 -j ACCEPT
-A FORWARD -j ts-forward
-A OUTPUT -s 127.0.0.1/32 -j ACCEPT
-A DOCKER -d 192.168.64.2/32 ! -i br-ad85042f2493 -o br-ad85042f2493 -p tcp -m tcp --dport 22300 -j ACCEPT
-A DOCKER -d 172.27.0.2/32 ! -i br-13d8c416478b -o br-13d8c416478b -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER -d 192.168.64.3/32 ! -i br-ad85042f2493 -o br-ad85042f2493 -p tcp -m tcp --dport 5432 -j ACCEPT
-A DOCKER -d 192.168.80.2/32 ! -i br-ae38ff210a82 -o br-ae38ff210a82 -p tcp -m tcp --dport 8096 -j ACCEPT
-A DOCKER -d 192.168.112.3/32 ! -i br-efdfc61de891 -o br-efdfc61de891 -p tcp -m tcp --dport 2283 -j ACCEPT
-A DOCKER -d 192.168.48.6/32 ! -i br-aeffba36d3c6 -o br-aeffba36d3c6 -p tcp -m tcp --dport 8000 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i br-aeffba36d3c6 ! -o br-aeffba36d3c6 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-eb9ed50d065e ! -o br-eb9ed50d065e -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-9048e5804adf ! -o br-9048e5804adf -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-653f8d9c9a60 ! -o br-653f8d9c9a60 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-13d8c416478b ! -o br-13d8c416478b -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-0f565fc28e09 ! -o br-0f565fc28e09 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-fc3beef5afd5 ! -o br-fc3beef5afd5 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-68905ab9bfbe ! -o br-68905ab9bfbe -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-ae38ff210a82 ! -o br-ae38ff210a82 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-5a4ae99fa727 ! -o br-5a4ae99fa727 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-2f970c564c32 ! -o br-2f970c564c32 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-131418b05d0c ! -o br-131418b05d0c -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-efdfc61de891 ! -o br-efdfc61de891 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-ec04658047a5 ! -o br-ec04658047a5 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-de9dc8b393da ! -o br-de9dc8b393da -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-ad85042f2493 ! -o br-ad85042f2493 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-83d47e059932 ! -o br-83d47e059932 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-7752a96d6505 ! -o br-7752a96d6505 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-71acd99896f9 ! -o br-71acd99896f9 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-5b4f89e637f2 ! -o br-5b4f89e637f2 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-e00b48123951 ! -o br-e00b48123951 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o br-aeffba36d3c6 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-eb9ed50d065e -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-9048e5804adf -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-653f8d9c9a60 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-13d8c416478b -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-0f565fc28e09 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-fc3beef5afd5 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-68905ab9bfbe -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-ae38ff210a82 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-5a4ae99fa727 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-2f970c564c32 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-131418b05d0c -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-efdfc61de891 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-ec04658047a5 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-de9dc8b393da -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-ad85042f2493 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-83d47e059932 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-7752a96d6505 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-71acd99896f9 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-5b4f89e637f2 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-e00b48123951 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.85.154.32/32 -i lo -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 41641 -j ACCEPT
COMMIT
# Completed on Mon Apr 21 11:19:40 2025
# Generated by iptables-save v1.8.9 (nf_tables) on Mon Apr 21 11:19:40 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
:ts-postrouting - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 192.168.48.0/20 ! -o br-aeffba36d3c6 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.21.0.0/16 ! -o br-eb9ed50d065e -j MASQUERADE
-A POSTROUTING -s 172.29.0.0/16 ! -o br-9048e5804adf -j MASQUERADE
-A POSTROUTING -s 172.25.0.0/16 ! -o br-653f8d9c9a60 -j MASQUERADE
-A POSTROUTING -s 172.27.0.0/16 ! -o br-13d8c416478b -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-0f565fc28e09 -j MASQUERADE
-A POSTROUTING -s 172.28.0.0/16 ! -o br-fc3beef5afd5 -j MASQUERADE
-A POSTROUTING -s 192.168.96.0/20 ! -o br-68905ab9bfbe -j MASQUERADE
-A POSTROUTING -s 192.168.80.0/20 ! -o br-ae38ff210a82 -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/16 ! -o br-5a4ae99fa727 -j MASQUERADE
-A POSTROUTING -s 172.31.0.0/16 ! -o br-2f970c564c32 -j MASQUERADE
-A POSTROUTING -s 172.26.0.0/16 ! -o br-131418b05d0c -j MASQUERADE
-A POSTROUTING -s 192.168.112.0/20 ! -o br-efdfc61de891 -j MASQUERADE
-A POSTROUTING -s 172.24.0.0/16 ! -o br-ec04658047a5 -j MASQUERADE
-A POSTROUTING -s 172.22.0.0/16 ! -o br-de9dc8b393da -j MASQUERADE
-A POSTROUTING -s 192.168.64.0/20 ! -o br-ad85042f2493 -j MASQUERADE
-A POSTROUTING -s 172.23.0.0/16 ! -o br-83d47e059932 -j MASQUERADE
-A POSTROUTING -s 192.168.16.0/20 ! -o br-7752a96d6505 -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 ! -o br-71acd99896f9 -j MASQUERADE
-A POSTROUTING -s 192.168.32.0/20 ! -o br-5b4f89e637f2 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-e00b48123951 -j MASQUERADE
-A POSTROUTING -j ts-postrouting
-A POSTROUTING -s 192.168.64.2/32 -d 192.168.64.2/32 -p tcp -m tcp --dport 22300 -j MASQUERADE
-A POSTROUTING -s 172.27.0.2/32 -d 172.27.0.2/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 192.168.64.3/32 -d 192.168.64.3/32 -p tcp -m tcp --dport 5432 -j MASQUERADE
-A POSTROUTING -s 192.168.80.2/32 -d 192.168.80.2/32 -p tcp -m tcp --dport 8096 -j MASQUERADE
-A POSTROUTING -s 192.168.112.3/32 -d 192.168.112.3/32 -p tcp -m tcp --dport 2283 -j MASQUERADE
-A POSTROUTING -s 192.168.48.6/32 -d 192.168.48.6/32 -p tcp -m tcp --dport 8000 -j MASQUERADE
-A DOCKER -i br-aeffba36d3c6 -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-eb9ed50d065e -j RETURN
-A DOCKER -i br-9048e5804adf -j RETURN
-A DOCKER -i br-653f8d9c9a60 -j RETURN
-A DOCKER -i br-13d8c416478b -j RETURN
-A DOCKER -i br-0f565fc28e09 -j RETURN
-A DOCKER -i br-fc3beef5afd5 -j RETURN
-A DOCKER -i br-68905ab9bfbe -j RETURN
-A DOCKER -i br-ae38ff210a82 -j RETURN
-A DOCKER -i br-5a4ae99fa727 -j RETURN
-A DOCKER -i br-2f970c564c32 -j RETURN
-A DOCKER -i br-131418b05d0c -j RETURN
-A DOCKER -i br-efdfc61de891 -j RETURN
-A DOCKER -i br-ec04658047a5 -j RETURN
-A DOCKER -i br-de9dc8b393da -j RETURN
-A DOCKER -i br-ad85042f2493 -j RETURN
-A DOCKER -i br-83d47e059932 -j RETURN
-A DOCKER -i br-7752a96d6505 -j RETURN
-A DOCKER -i br-71acd99896f9 -j RETURN
-A DOCKER -i br-5b4f89e637f2 -j RETURN
-A DOCKER -i br-e00b48123951 -j RETURN
-A DOCKER ! -i br-ad85042f2493 -p tcp -m tcp --dport 22300 -j DNAT --to-destination 192.168.64.2:22300
-A DOCKER ! -i br-13d8c416478b -p tcp -m tcp --dport 32768 -j DNAT --to-destination 172.27.0.2:80
-A DOCKER ! -i br-ad85042f2493 -p tcp -m tcp --dport 5432 -j DNAT --to-destination 192.168.64.3:5432
-A DOCKER ! -i br-ae38ff210a82 -p tcp -m tcp --dport 8096 -j DNAT --to-destination 192.168.80.2:8096
-A DOCKER ! -i br-efdfc61de891 -p tcp -m tcp --dport 2283 -j DNAT --to-destination 192.168.112.3:2283
-A DOCKER ! -i br-aeffba36d3c6 -p tcp -m tcp --dport 8000 -j DNAT --to-destination 192.168.48.6:8000
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Mon Apr 21 11:19:40 2025
